2007-08-06  Jie Zhang  <jie.zhang@analog.com>

	* math_bf.h (isinff): Remove.
	(isinf): Remove.
	(isinfd): Remove.
	(isnanf): Remove.
	(isnan): Remove.
	(isnand): Remove.

2007-08-03  Jie Zhang  <jie.zhang@analog.com>

	* cycle_count_bf.h (_GET_CYCLE_COUNT): Use constraints "R1"
	and "R2" instead of "r1" and "r2" respectively.
	(_STOP_CYCLE_COUNT): Likewise.

2007-08-03  Jie Zhang  <jie.zhang@analog.com>

	* cycle_count_bf.h (_GET_CYCLE_COUNT): Use constraint "a"
	instead of "p" for P register.
	(_STOP_CYCLE_COUNT): Likewise.

2007-08-03  Jie Zhang  <jie.zhang@analog.com>

	* xcycle_count.h: Processed with fix sed scripts.
	* cycle_count.h: Likewise.
	* cycle_count_bf.h: Likewise.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* matrix.h (MatrixMultVec3x1Frac28_4): Declare.
	(MatrixMultVec3x1Frac24_8): Declare.
	(MatrixMultVec4x1Frac24_8): Declare.
	* fract_math.h (fract24_8mul_asm): Declare.
	(fract28_4mul_asm): Declare.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* math_bf.h: Processed with c_fix_pragmas.sed.
	* i2x16_base.h: Likewise.
	* complex.h: Likewise.
	* float16.h: Likewise.
	* i2x16_math.h: Likewise.
	* fr2x16_base.h: Likewise.
	* fract2float_conv.h: Likewise.
	* flt2fr.h: Likewise.
	* fr2x16_math.h: Likewise.
	* matrix.h: Likewise.
	* fract_math.h: Likewise.
	* r2x16_base.h: Likewise.
	* complex_bf.h: Likewise.
	* fract_complex.h: Likewise.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* math_bf.h (_C_STD_BEGIN): Don't use.
	(_C_LIB_DECL): Don't use.
	(_END_C_LIB_DECL): Don't use.
	(_C_STD_END): Don't use.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* yvals.h: Remove.
	* math_bf.h: Don't include yvals.h.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* math_bf.h: Don't include ccblkfn.h.
	Include gcc.h instead.
	(__builtin_bfin_max): Don't declare.
	(__builtin_bfin_lmax): Likewise.
	(__builtin_bfin_min): Likewise.
	(__builtin_bfin_lmin): Likewise.
	* r2x16_typedef.h (raw2x16): Typedef as __v2hi if
	__NO_BUILTIN is not defined.